0.060 2013-07-25 15:22:00 GMT 
   * Support secondary indexes (2i)

0.059 2013-06-06 16:27:08 GMT 
   * Refactor util class. (Tiago Peczenyj)

0.058 2013-06-06 15:27:08 GMT 
   * Small refactor, fix small things, fix solaris support. (Tiago Peczenyj)

0.057 2013-05-30 15:27:08 GMT 
   * Cleanups, speedups, refactoring (Damien Krotkine)

0.056 2013-05-17 08:18:08 GMT 
   * bugfix clean $@ before all methods [issue #9] (Tiago Peczenyj)

0.055 2013-05-16 22:18:08 GMT 
   * remove namespace::autoclean [issue #8] (Tiago Peczenyj)
   * change minimum perl to 5.008

0.054 2013-05-16 11:31:08 GMT 
   * Remove extra test (Tiago Peczenyj) 

0.053 2013-05-16 09:31:08 GMT 
   * Remove extra method (debug / experimental) (Tiago Peczenyj) 

0.052 2013-05-16 07:31:08 GMT 
   * Fix owner

0.051 2013-05-15 18:31:08 GMT 
   * Fix test

0.05 2013-05-15 17:31:08 GMT 
   * Fix bug in EOF
   * add exists method, to test if there is some bucket => key

0.04 2013-05-14 21:21:27 GMT 
   * Fix bug in SetSockOpt (Tiago Peczenyj)
   * Add warnings in Alarm and TimeOut providers (not safe)
   * Add OS type / version check for some providers (Win32, NetBSD)
   * Improve test coverage
   * IO::Select is the default timeout provider
   * Fix tests and error strings (will work for other OS)
   * Minimum perl 5.12
   * Small improvements 

0.03 2013-05-14 11:21:27 GMT 
   * Improve setsockopt (Tiago Peczenyj)
   
0.02 2013-05-13 13:16:08 GMT 
   * Fix documentatio (Tiago Peczenyj)

0.01 2013-05-13 10:16:08 GMT 
   * First version (Tiago Peczenyj)