@@ -194,7 +194,7 @@ sub _fetch {
 sub put_raw {
     state $check =
       compile( Any, Str, Str, Any, Optional [Str],
-        Optional [ HashRef [Str] ] );
+        Optional [ HashRef [ Str | ArrayRef [Str] ] ] );
     my ( $self, $bucket, $key, $value, $content_type, $indexes ) =
       $check->(@_);
     $content_type ||= 'plain/text';
@@ -204,7 +204,7 @@ sub put_raw {
 sub put {
     state $check =
       compile( Any, Str, Str, Any, Optional [Str],
-        Optional [ HashRef [Str] ] );
+        Optional [ HashRef [ Str | ArrayRef [Str] ] ] );
     my ( $self, $bucket, $key, $value, $content_type, $indexes ) =
       $check->(@_);
 
@@ -225,8 +225,13 @@ sub _store {
                 content_type => $content_type,
                 (   $indexes
                     ? ( indexes => [
-                            map { { key => $_, value => $indexes->{$_} } }
-                              keys %$indexes
+                            map {
+                                my $k = $_;
+                                my $v = $indexes->{$_};
+                                ref $v eq 'ARRAY'
+                                  ? map { { key => $k, value => $_ }; } @$v
+                                  : { key => $k, value => $v };
+                              } keys %$indexes
                         ]
                       )
                     : ()
@@ -642,6 +647,10 @@ stored in the bucket/key.
   $client->put( 'bucket', 'key', { some_values => [1,2,3] }, undef,
                 { field1_bin => 'abc', field2_int => 42 }
               );
+  # remember that a key can have more than one value in a given index. In this
+  # case, use ArrayRef:
+  $client->put( 'bucket', 'key', 'value', undef,
+                { field1_bin => [ 'abc', 'def' ] } );
 
 Perform a store operation. Expects bucket and key names, the value, the content
 type (optional, default is 'application/json'), and the indexes to set for this
